--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "nightwatch --env chrome --headless"
+    "test": "nightwatch --env chrome --headless",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "pinia": "2.0.24",
