--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "middlemarch",
   "version": "0.0.0",
   "author": "George Eliot",
+  "homepage": "https://xavierg-esp.github.io/middlemarch-vite-test",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "test": "nightwatch --env chrome --headless",
-    "deploy": "npm run build && gh-pages -d dist"
+    "deploy": "npm run build && gh-pages -d dist",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "pinia": "2.0.24",
@@ -18,8 +21,9 @@
     "@vitejs/plugin-vue": "3.2.0",
     "chromedriver": "107.0.3",
     "geckodriver": "3.2.0",
-    "vite": "3.2.4",
+    "gh-pages": "^6.0.0",
     "nightwatch": "2.5.1",
+    "vite": "^3.2.4",
     "vite-plugin-nightwatch": "0.3.2"
   }
 }
